<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/foto_saya"
                android:cropToPadding="true"
                android:padding="8dp"
                android:background="@android:color/darker_gray"
                android:adjustViewBounds="true"
                android:contentDescription="@string/kipli" />
            <TextView
                android:layout_gravity="bottom"
                android:layout_marginStart="14dp"
                android:layout_marginBottom="14dp"
                android:background="#4D000000"
                android:drawableStart="@drawable/ic_photo_black_24dp"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                style="@style/Content.Smaller.White"
                android:text="@string/app_name"/>

        </FrameLayout>

        <TextView
            style="@style/Content.Black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/nama_lengkap"
            android:textSize="24sp"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@android:color/white"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/Content.TextGrey"
                    android:layout_marginBottom="6dp"
                    android:text="@string/data_diri"/>
                <TextView
                    style="@style/Content"
                    android:text="@string/ttl"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    style="@style/Content"
                    android:text="@string/alamat"
                    android:layout_marginBottom="16dp"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@android:color/white"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Content.TextGrey"
                    android:layout_marginBottom="6dp"
                    android:text="@string/riwayat"
                    />
                <TextView
                    style="@style/Content"
                    android:text="@string/MI"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    style="@style/Content"
                    android:text="@string/MTS"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    style="@style/Content"
                    android:text="@string/SMA"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="16dp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@android:color/white"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Content.TextGrey"
                    android:layout_marginBottom="6dp"
                    android:text="@string/hobby"
                    />
                <TextView
                    style="@style/Content"
                    android:layout_marginBottom="16dp"
                    android:lineSpacingMultiplier="1"
                    android:text="@string/hobby_saya"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
